--- a/ShowUI/frmShowUI.resx
+++ b/ShowUI/frmShowUI.resx
@@ -2516,6 +2516,9 @@
   <metadata name="SamplingThroughtput.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>825, 95</value>
   </metadata>
+  <metadata name="FtpLog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>996, 95</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>271</value>
   </metadata>
