--- a/ShowUI/frmShowUI.resx
+++ b/ShowUI/frmShowUI.resx
@@ -1625,7 +1625,7 @@
     <value>453, 56</value>
   </metadata>
   <metadata name="notifyShowUI.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>558, 56</value>
+    <value>563, 57</value>
   </metadata>
   <data name="notifyShowUI.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2518,6 +2518,9 @@
   </metadata>
   <metadata name="FtpLog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>996, 95</value>
+  </metadata>
+  <metadata name="tmQty.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1085, 95</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>271</value>
