check Temperature cpu

--- a/ShowUI/frmShowUI.resx
+++ b/ShowUI/frmShowUI.resx
@@ -2513,6 +2513,9 @@
   <metadata name="tmQty.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>834, 95</value>
   </metadata>
+  <metadata name="tmTemperature.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>920, 95</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>271</value>
   </metadata>
