--- a/ShowUI/frmShowUI.resx
+++ b/ShowUI/frmShowUI.resx
@@ -2519,6 +2519,9 @@
   <metadata name="tmCheckATE.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>328, 134</value>
   </metadata>
+  <metadata name="TimerCheckAfterShowFullDriver.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>449, 134</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>271</value>
   </metadata>
