--- a/ShowUI/frmShowUI.resx
+++ b/ShowUI/frmShowUI.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="WriteSPC.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>134, 17</value>
+    <value>282, 17</value>
   </metadata>
   <metadata name="UpdateYR.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>236, 17</value>
+    <value>385, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pbUsb.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1506,26 +1506,8 @@
 </value>
   </data>
   <metadata name="rightMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>342, 17</value>
+    <value>491, 17</value>
   </metadata>
-  <data name="mnTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6
-        JQAAgIMAAPn/AACA6AAAdTAAAOpgAAA6lwAAF2+XqZnUAAACsElEQVQ4T2P4//8/RRjOMDU1WRUWFvJa
-        QkK8FiZmY2OjJi0tvcfKyuqNiYnJWVtbW1GYHAzDGYyMjGweHu7Ply9b9Nva2mofsiIHBwcZDw+Pr66u
-        rl/4+fkbkOUYNDQ0JktISOSAOQwMnOnpaf+jIiP+IisCYRkZmRNtbW3/CwsLfwoICEyAiTPY29s/am1t
-        /sDMzFzGzs5eXVxU+N/ayuo1smYQ1tXVfQz00v/29vb/QPqbtrY2G9iA9PR0JS8vz999vd1/+vt6gApa
-        /wO98r62toYXptnHx+fguXPn/gcFBX0BGdLY2Pgf6HKwN8EKsrKyatzd3P4A/fgOaNiHCf29/318vN41
-        NNQLgzRfvXr1//bt2z/Kyso2GxoayomIiBxMSkp6Awzcy3AnAgETiK6oqOAFGvJu2vTp/yMjI3+BNO/e
-        vfsTSDNMrbq6+oKIiIjfwsLCfXADkLGwrHZ/84Ij/won7Pi/eeuOf1qamlPR1QDDgB1EowiCMJ+UVueU
-        tee/bzh8579Jwsz/WZU9/2fNnP4F6IJWdLUgjMIRkNPvn77hws/tJ+79N02c+V9E1frZxIkTv2/ftvn/
-        ooXzfigrK/UiqwdhOENQwXjKzE0Xf+858/C/WdKs/0IqVk/lrOIFgfHfuXD+3F+HDu79v2b1il/A0Efx
-        DpgQVrGcPWfLpb97zz78b5E8G6jZ+pWsZZw4TJGSktIkoOY/Z08f/79184Y/uro68+AGmKQuYfKILvl1
-        4Pyj/5Ypc4Cabd7JWsUpwhTAsKaGxrwd2zf/u3ThzP/lyxb/BqZecJiAJeX1XZYp2cT+E1ax/gi0WQtZ
-        IzIGpsaVaanJf0JDgh9VVJQjDAACNhmzSH8BRTMLIFsciEWBWBiIBYFYBErzAbEAMG0EFuTnT/D39+f6
-        //8/AwCc9Dml/e50RAAAAABJRU5ErkJggg==
-</value>
-  </data>
   <data name="abnormalToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
@@ -1566,6 +1548,24 @@
         COMLqk9awRyTFRC/leM+ulOlgNrkrGqBSUTcA/QOzVH1z3RfAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="mnTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6
+        JQAAgIMAAPn/AACA6AAAdTAAAOpgAAA6lwAAF2+XqZnUAAACsElEQVQ4T2P4//8/RRjOMDU1WRUWFvJa
+        QkK8FiZmY2OjJi0tvcfKyuqNiYnJWVtbW1GYHAzDGYyMjGweHu7Ply9b9Nva2mofsiIHBwcZDw+Pr66u
+        rl/4+fkbkOUYNDQ0JktISOSAOQwMnOnpaf+jIiP+IisCYRkZmRNtbW3/CwsLfwoICEyAiTPY29s/am1t
+        /sDMzFzGzs5eXVxU+N/ayuo1smYQ1tXVfQz00v/29vb/QPqbtrY2G9iA9PR0JS8vz999vd1/+vt6gApa
+        /wO98r62toYXptnHx+fguXPn/gcFBX0BGdLY2Pgf6HKwN8EKsrKyatzd3P4A/fgOaNiHCf29/318vN41
+        NNQLgzRfvXr1//bt2z/Kyso2GxoayomIiBxMSkp6Awzcy3AnAgETiK6oqOAFGvJu2vTp/yMjI3+BNO/e
+        vfsTSDNMrbq6+oKIiIjfwsLCfXADkLGwrHZ/84Ij/won7Pi/eeuOf1qamlPR1QDDgB1EowiCMJ+UVueU
+        tee/bzh8579Jwsz/WZU9/2fNnP4F6IJWdLUgjMIRkNPvn77hws/tJ+79N02c+V9E1frZxIkTv2/ftvn/
+        ooXzfigrK/UiqwdhOENQwXjKzE0Xf+858/C/WdKs/0IqVk/lrOIFgfHfuXD+3F+HDu79v2b1il/A0Efx
+        DpgQVrGcPWfLpb97zz78b5E8G6jZ+pWsZZw4TJGSktIkoOY/Z08f/79184Y/uro68+AGmKQuYfKILvl1
+        4Pyj/5Ypc4Cabd7JWsUpwhTAsKaGxrwd2zf/u3ThzP/lyxb/BqZecJiAJeX1XZYp2cT+E1ax/gi0WQtZ
+        IzIGpsaVaanJf0JDgh9VVJQjDAACNhmzSH8BRTMLIFsciEWBWBiIBYFYBErzAbEAMG0EFuTnT/D39+f6
+        //8/AwCc9Dml/e50RAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="cableCtrlThayCápToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAwAAAARCAYAAADpPU2iAAAABGdBTUEAALGPC/xhBQAAAndJREFUOE9j
@@ -1598,34 +1598,34 @@
 </value>
   </data>
   <metadata name="CheckUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>451, 17</value>
+    <value>601, 17</value>
   </metadata>
   <metadata name="timerCheckUdateAntiVirusSoft.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>575, 17</value>
+    <value>726, 17</value>
   </metadata>
   <metadata name="timerCableStatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>792, 17</value>
+    <value>941, 17</value>
   </metadata>
   <metadata name="timerBlinkCable.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 56</value>
+    <value>1085, 17</value>
   </metadata>
   <metadata name="toolTipVirus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>165, 17</value>
   </metadata>
   <metadata name="toolTipUSB.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>154, 56</value>
+    <value>1223, 17</value>
   </metadata>
   <metadata name="timerEnableTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>409, 56</value>
+    <value>17, 54</value>
   </metadata>
   <metadata name="timerAutoUpload.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>556, 56</value>
+    <value>164, 54</value>
   </metadata>
   <metadata name="timerFake.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>702, 56</value>
+    <value>310, 54</value>
   </metadata>
   <metadata name="notifyShowUI.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>807, 56</value>
+    <value>416, 54</value>
   </metadata>
   <data name="notifyShowUI.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2487,43 +2487,46 @@
 </value>
   </data>
   <metadata name="timerCheckUpdateTestFlag.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 95</value>
+    <value>541, 54</value>
   </metadata>
   <metadata name="timerShowfPanelHData.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>215, 95</value>
+    <value>736, 54</value>
   </metadata>
   <metadata name="timercheckGoiTE.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>266, 56</value>
+    <value>1335, 17</value>
   </metadata>
   <metadata name="YR_RRUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>393, 95</value>
+    <value>913, 54</value>
   </metadata>
   <metadata name="TimerFakeShowUI.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>519, 95</value>
+    <value>1038, 54</value>
   </metadata>
   <metadata name="TimerIQTestTime.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>668, 95</value>
+    <value>1186, 54</value>
   </metadata>
   <metadata name="CheckAntivirut.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>812, 95</value>
+    <value>1327, 54</value>
   </metadata>
   <metadata name="FtpLog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 134</value>
+    <value>1460, 54</value>
   </metadata>
   <metadata name="tmQty.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>106, 134</value>
+    <value>17, 91</value>
   </metadata>
   <metadata name="tmTemperature.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>188, 134</value>
+    <value>105, 91</value>
   </metadata>
   <metadata name="tmCheckATE.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>328, 134</value>
+    <value>240, 91</value>
   </metadata>
   <metadata name="TimerCheckAfterShowFullDriver.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>449, 134</value>
+    <value>361, 91</value>
+  </metadata>
+  <metadata name="timerKillPingCmd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>271</value>
+    <value>167</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
